--- a/styles.css
+++ b/styles.css
@@ -255,4 +255,4 @@ span{
 		}/* CSS Document */
 
 
- <!-- body { background:url() repeat-x, url('') }*{ cursor:url(),auto} -->
+ <!-- body { background:url() repeat-x, url('') }*{ cursor:url(https://xatimg.com/image/hE90hokiv6Qq.png),auto} -->
